# sfctl

./: .gitignore  AGENTS.md  README.md  pp.json  pyproject.toml
docs/: shared-compare-design.tex
sfctl/: __init__.py  __main__.py  analysis.py  api.py  app.py  app.tcss  arena.py  badges.py  cli.py  commands.py  config.py  constants.py  cq_viewport.py  diff.py  diff_compare.py  editor.py  formatting.py  fuzzy.py  history.py  ids.py  models.py  parsing.py  proposal.py  ranking.py  scoring.py  screens.py  search.py  session.py  task_types.py  voting.py  widgets.py
sfctl/handlers/: __init__.py  arena.py  base.py  proposal.py  ranking.py
tests/: conftest.py  test_analysis.py  test_api.py  test_app.py  test_arena.py  test_cli.py  test_compare_conformance.py  test_config.py  test_cq_viewport.py  test_diff_compare.py  test_history_normalize.py  test_models.py  test_parsing.py  test_ranking.py  test_scoring.py  test_widgets.py
tests/fixtures/: arena_sample.json  complex_lifecycle.json  task_sample.json
